change image path

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <li>Kindness</li>
         <li>Empathy</li>
     </ul>
-    <img src="/home/navgurukul/galery.html/img/equality.jpg">
+    <img src="image/equality.jpg">
     <p>World is full of inequalities. Sometimes, we are the ones who engage in it. At other times, we are the recipients. It exists in various forms like below:
         </p>
     <ol>
@@ -35,7 +35,7 @@
          <li>Health or disability</li>
     </ol>
     <h1>Should equality exist?</h1>
-    <img src="/home/navgurukul/galery.html/img/hand.jpg"style="width:100%">
+    <img src="image/elephant.jpg"style="width:100%">
     <h1>Is it okay for us to not do anything about it?
 </h1>
     <h1>Let's Pledge</h1>
